# serenedb

./: .actrc  .clang-format  .gitignore  .gitmodules  .lldbinit  .pre-commit-config.yaml  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DUCKDB_MIGRATION.md  NORM.md  NOTICE.md  ONBOARDING.md  OPTIMIZER_COVERAGE.md  OPTIMIZER_EXPLAIN.md  OPTIMIZER_NEXT.md  RBAC_DIV_CONVERGENCE_STATUS.md  README.md  SECURITY.md  TODO.md  benchmark.md  error.txt  instruction.md  kal.sql  lldb_addons.py  no_rule.md  plan.md  problems.md  rbac_access_check_plan.md  review_order.md  rls_plan.md
libs/: CMakeLists.txt
libs/app/: app_feature.h  app_server.cpp  app_server.h  config.cpp  config.h  global_context.cpp  global_context.h  http_endpoint_provider.h  init.cpp  init.h  language.h  logger_feature.cpp  logger_feature.h  name_validator.cpp  name_validator.h  version.cpp  version.h
libs/basics/: application-exit.cpp  application-exit.h  asio_ns.h  async_utils.cpp  async_utils.hpp  bit_packing.cpp  bit_packing.hpp  bit_utils.hpp  buffer.h  cleanup_functions.h  crash_handler.cpp  crash_handler.h  crash_handler_light.cpp  datetime.cpp  debug_race_controller.h  debugging.cpp  debugging.h  directories.h.in  down_cast.h  dtoa.cpp  dtoa.h  duckdb_engine.cpp  duckdb_engine.h  empty.hpp  encoding_utils.cpp  error.cpp  error.h  error_code.h  error_t.h  exceptions.cpp  exceptions.h  file_descriptors.cpp  file_result.h  file_result_string.h  file_utils.cpp  file_utils.h  file_utils_ext.cpp  file_utils_ext.hpp  files.cpp  files.h  (+80 more)
libs/build_id/: CMakeLists.txt
libs/endpoint/: connection_info.h  endpoint.cpp  endpoint.h  endpoint_ip.cpp  endpoint_ip.h  endpoint_ip_v4.cpp  endpoint_ip_v4.h  endpoint_ip_v6.cpp  endpoint_ip_v6.h  endpoint_list.cpp  endpoint_list.h  endpoint_srv.cpp  endpoint_srv.h  endpoint_unix_domain.cpp  endpoint_unix_domain.h
libs/geo/: CMakeLists.txt  coding.cpp  coding.h  geo_json.cpp  geo_json.h  geo_params.h  shape_container.cpp  shape_container.h  utils.cpp  wkb.cpp  wkb.h
libs/http_client/: client_connection.h  connection_cache.h  general_client_connection.cpp  general_client_connection.h  http_client.cpp  http_client.h  http_response_checker.h  http_result.h  ssl_client_connection.cpp  ssl_client_connection.h
libs/iresearch/: README.md
libs/maskings/: attribute_masking.h  collection.h  collection_filter.h  collection_selection.h  masking_function.h  path.h  random_mask.h  random_string_mask.h
libs/pg/: errcodes.h  sql_error.h  sql_exception.h  sql_exception_macro.h
libs/query/: CMakeLists.txt  duckdb_engine.cpp  duckdb_engine.h  log_types.cpp  log_types.h
libs/rest/: common_defines.cpp  common_defines.h  general_request.cpp  general_request.h  general_response.cpp  general_response.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  request_context.h  version.cpp  version.h
libs/vpack/: CMakeLists.txt
server/: CMakeLists.txt
server/auth/: CMakeLists.txt  acl.cpp  acl.h  common.cpp  common.h  privilege.cpp  privilege.h  role_closure.cpp  role_closure.h  role_utils.cpp  role_utils.h  token_cache.cpp  token_cache.h
server/catalog/: CMakeLists.txt  access_check.cpp  access_check.h  analyzer.cpp  analyzer.h  base_query_view.cpp  base_query_view.h  catalog.cpp  catalog.h  column_expr.cpp  column_expr.h  composite_type.cpp  composite_type.h  create_info_serde.h  database.cpp  database.h  databases.cpp  databases.h  default_value.cpp  default_value.h  drop_task.cpp  drop_task.h  enum_type.cpp  enum_type.h  foreign_server.cpp  foreign_server.h  format_options.cpp  format_options.h  function.cpp  function.h  fwd.h  geo_validate.h  graph_view.cpp  graph_view.h  index.cpp  index.h  inverted_index.cpp  inverted_index.h  key_generator.cpp  key_generator.h  (+61 more)
server/connector/: CMakeLists.txt  ann_filter.cpp  ann_filter.hpp  column_decoder.hpp  column_extract.cpp  column_extract.h  columnstore_materializer.cpp  columnstore_materializer.h  common.cpp  common.h  comparison_op.hpp  copy_byte_source.h  counter_row_materializer.cpp  counter_row_materializer.h  data_materializer.cpp  data_materializer.hpp  data_sink.cpp  data_sink.hpp  data_source.cpp  data_source.hpp  duckdb_access_check.cpp  duckdb_access_check.h  duckdb_ann_filter.cpp  duckdb_ann_filter.h  duckdb_catalog.cpp  duckdb_catalog.h  duckdb_client_state.cpp  duckdb_client_state.h  duckdb_column_serializer.cpp  duckdb_column_serializer.h  duckdb_constraint_verify.cpp  duckdb_constraint_verify.h  duckdb_copy_filesystem.cpp  duckdb_copy_filesystem.h  duckdb_create_info_serializer.h  duckdb_entry_cache.cpp  duckdb_entry_cache.h  duckdb_external_scan.cpp  duckdb_external_scan.h  duckdb_foreign_server_function.cpp  (+256 more)
server/database/: CMakeLists.txt  ticks.cpp  ticks.h
server/functions/: CMakeLists.txt  search.cpp  search.h  vector.cpp  vector.h
server/general_server/: CMakeLists.txt  acceptor.cpp  acceptor.h  acceptor_tcp.cpp  acceptor_tcp.h  acceptor_unix_domain.cpp  acceptor_unix_domain.h  asio_socket.h  async_job_manager.cpp  async_job_manager.h  authentication_feature.cpp  comm_task.h  general_comm_task.cpp  general_comm_task.h  general_server.cpp  general_server.h  general_server_feature.cpp  general_server_feature.h  generic_comm_task.cpp  generic_comm_task.h  h2_comm_task.cpp  h2_comm_task.h  http_comm_task.cpp  http_comm_task.h  io_context.cpp  io_context.h  request_lane.h  rest_handler.cpp  rest_handler.h  rest_handler_factory.cpp  rest_handler_factory.h  scheduler.cpp  scheduler.h  scheduler_feature.cpp  scheduler_feature.h  server_options_feature.cpp  server_options_feature.h  signal_handling.cpp  signal_handling.h  ssl_server_feature.cpp  (+3 more)
server/metrics/: batch.h  builder.cpp  builder.h  counter.cpp  counter.h  counter_builder.h  fix_scale.h  fwd.h  gauge.h  gauge_builder.h  gauge_counter_guard.h  guard.h  histogram.h  histogram_builder.h  ibatch.h  lin_scale.h  log_scale.h  metric.cpp  metric.h  metric_key.h  metrics_feature.cpp  metrics_feature.h  parse.h  scale.h  types.h
server/network/: CMakeLists.txt  acceptor.h  ada_re2_provider.cpp  gate.h  (+31 more)
(+4451 files in other folders)
