target_sources(
    sereneserver
    PRIVATE
        server_state.cpp
        column_expr.cpp
        database.cpp
        drop_task.cpp
        schema.cpp
        databases.cpp
        local_catalog.cpp
        catalog.cpp
        object.cpp
        table_options.cpp
        search_analyzer_impl.cpp
        table.cpp
        index.cpp
        view.cpp
        sequence.cpp
        function.cpp
        user_type.cpp
        role.cpp
        secondary_index.cpp
        inverted_index.cpp
        mangling.cpp
        scorer_options.cpp
        tokenizer.cpp
)

add_subdirectory(identifiers)
