add_subdirectory(sdb_catalog)
add_subdirectory(commands)
target_sources(
    sereneserver
    PRIVATE
        pg_catalog/pg_am.cpp
        pg_catalog/pg_attribute.cpp
        pg_catalog/pg_authid.cpp
        pg_catalog/pg_auth_members.cpp
        pg_catalog/pg_class.cpp
        pg_catalog/pg_constraint.cpp
        pg_catalog/pg_database.cpp
        pg_catalog/pg_db_role_setting.cpp
        pg_catalog/pg_default_acl.cpp
        pg_catalog/pg_description.cpp
        pg_catalog/pg_enum.cpp
        pg_catalog/pg_extension.cpp
        pg_catalog/pg_hba_file_rules.cpp
        pg_catalog/pg_foreign_server.cpp
        pg_catalog/pg_index.cpp
        pg_catalog/pg_language.cpp
        pg_catalog/pg_namespace.cpp
        pg_catalog/pg_opclass.cpp
        pg_catalog/pg_proc.cpp
        pg_catalog/pg_tablespace.cpp
        pg_catalog/pg_ts_dict.cpp
        pg_catalog/sdb_progress.cpp
        pg_catalog/pg_type.cpp
        pg_catalog/pg_user_mapping.cpp
        information_schema/sql_implementation_info.cpp
        information_schema/sql_parts.cpp
        information_schema/sql_sizing.cpp
        command_tag.cpp
        connection_context.cpp
        pg_types.cpp
        serialize.cpp
        deserialize.cpp
        system_catalog.cpp
        progress_registry.cpp
        sql_utils.cpp
        option_help.cpp
        tokenizer_options.cpp
        geo_tokenizer_options.cpp
)
